@@ -1,10 +1,11 @@
 Source: prometheus
-Section: net
-Priority: extra
 Maintainer: Debian Go Packaging Team <pkg-go-maintainers@lists.alioth.debian.org>
-Uploaders: Martín Ferrari <tincho@debian.org>
-Build-Depends: adduser, debhelper (>= 9.0.0),
-               golang-go (>= 2:1.8~),
+Uploaders: Martín Ferrari <tincho@debian.org>,
+Section: net
+Testsuite: autopkgtest-pkg-go
+Priority: extra
+Build-Depends: adduser,
+               debhelper (>= 9.0.0),
                dh-golang (>= 1.17~),
                dh-systemd,
                golang-github-asaskevich-govalidator-dev,
@@ -12,9 +13,9 @@ Build-Depends: adduser, debhelper (>= 9.0.0),
                golang-github-azure-azure-sdk-for-go-dev,
                golang-github-azure-go-autorest-dev,
                golang-github-dgrijalva-jwt-go-dev,
-               golang-github-fsnotify-fsnotify-dev (>= 1.3.0-3),
+               golang-github-fsnotify-fsnotify-dev,
                golang-github-gogo-protobuf-dev,
-               golang-github-golang-snappy-dev (>= 0.0+git20160529),
+               golang-github-golang-snappy-dev,
                golang-github-gophercloud-gophercloud-dev,
                golang-github-hashicorp-consul-dev,
                golang-github-hashicorp-go-cleanhttp-dev,
@@ -31,31 +32,33 @@ Build-Depends: adduser, debhelper (>= 9.0.0),
                golang-github-sirupsen-logrus-dev,
                golang-github-stretchr-testify-dev,
                golang-github-syndtr-goleveldb-dev,
-               golang-golang-x-net-dev (>= 1:0.0+git20160518),
+               golang-go (>= 2:1.8~),
+               golang-golang-x-net-dev,
                golang-golang-x-oauth2-google-dev,
                golang-golang-x-sys-dev,
                golang-golang-x-time-dev,
                golang-google-api-dev,
                golang-gopkg-yaml.v2-dev,
-Standards-Version: 4.0.0
-Vcs-Git: https://anonscm.debian.org/git/pkg-go/packages/prometheus.git
+Standards-Version: 4.1.0
 Vcs-Browser: https://anonscm.debian.org/cgit/pkg-go/packages/prometheus.git
+Vcs-Git: https://anonscm.debian.org/git/pkg-go/packages/prometheus.git
 Homepage: https://prometheus.io/
-Testsuite: autopkgtest-pkg-go
+XS-Go-Import-Path: github.com/prometheus/prometheus
 
 Package: prometheus
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends},
-         daemon | systemd-sysv,
+Depends: daemon | systemd-sysv,
          libjs-bootstrap,
          libjs-eonasdan-bootstrap-datetimepicker,
-         libjs-mustache (>= 2.3.0-1~),
          libjs-jquery (>= 1.11.3~),
          libjs-jquery-hotkeys,
          libjs-moment,
+         libjs-mustache (>= 2.3.0-1~),
          libjs-rickshaw,
-Recommends: prometheus-node-exporter
-Built-Using: ${misc:Built-Using}
+         ${misc:Depends},
+         ${shlibs:Depends},
+Recommends: prometheus-node-exporter,
+Built-Using: ${misc:Built-Using},
 Description: Monitoring system and time series database
  Prometheus is a systems and services monitoring system. It collects metrics
  from configured targets at given intervals, evaluates rule expressions,
