@@ -1,11 +1,10 @@
-debian/prometheus.yml   etc/prometheus/
 debian/README.consoles  etc/prometheus/console_libraries
 debian/README.consoles  etc/prometheus/consoles
-web/ui/templates/       usr/share/prometheus/web/
+debian/prometheus.yml   etc/prometheus/
 web/ui/static/css/      usr/share/prometheus/web/static
 web/ui/static/img/      usr/share/prometheus/web/static
 web/ui/static/js/       usr/share/prometheus/web/static
-#
 web/ui/static/vendor/bootstrap3-typeahead  usr/share/prometheus/web/static/vendor
 web/ui/static/vendor/fuzzy                 usr/share/prometheus/web/static/vendor
 web/ui/static/vendor/js                    usr/share/prometheus/web/static/vendor
+web/ui/templates/       usr/share/prometheus/web/
