@@ -1,3 +1,4 @@
+Description: Add default settings adapted for Debian.
 --- a/cmd/prometheus/config.go
 +++ b/cmd/prometheus/config.go
 @@ -102,7 +102,8 @@
