@@ -3,6 +3,9 @@ prometheus (1.7.1+ds-2) UNRELEASED; urgency=medium
   * Update versioned dependency on -common.
   * Remove now unneeded lintian overrides.
   * Replace dpkg-parsechangelog with /usr/share/dpkg/pkg-info.mk
+  * debian/control: Update Standards-Version (no changes).
+  * debian/rules: Replace DH_GOPKG with XS-Go-Import-Path.
+  * Automatic fixes to control and copyright from cme.
 
  -- Martín Ferrari <tincho@debian.org>  Thu, 17 Aug 2017 12:57:42 +0000
 
